added symfony and nextjs

--- a/docker/nginx/symfony.conf
+++ b/docker/nginx/symfony.conf
@@ -2,7 +2,7 @@ server {
     listen 80;
     client_max_body_size 30M;
     server_name localhost;
-    root /var/www/subliminator/public;
+    root /var/www/tech/public;
 
     location / {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
