--- a/backend/.env
+++ b/backend/.env
@@ -16,7 +16,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=d3f3bdd9f52af798bcb74a7317c49dad
+APP_SECRET=71e86df1e7f405fba99a76422f34651e
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
@@ -24,6 +24,7 @@ APP_SECRET=d3f3bdd9f52af798bcb74a7317c49dad
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-# DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
-DATABASE_URL="mysql://user:secret@database/subliminator?serverVersion=5"
+ DATABASE_URL="mysql://user:secret@database:3306/tech?serverVersion=8.0.32&charset=utf8mb4"
+# DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
+#DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
