--- a/docker/.env
+++ b/docker/.env
@@ -1,6 +1,10 @@
-DATABASE_NAME=subliminator
+DATABASE_NAME=tech
 DATABASE_USER=user
 DATABASE_PASSWORD=secret
 DATABASE_ROOT_PASSWORD=root
 
 APP_ENV=dev
+MYSQL_VERSION=8.1.0
+PHP_VERSION=8.2-fpm-alpine3.18
+NGINX_VERSION=1.25.2
+NODE_VERSION=20.5-alpine3.18
