--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -3,7 +3,7 @@ services:
     build:
       context: ./mysql
       args:
-        MYSQL_VERSION: 8.0.32
+        MYSQL_VERSION: ${MYSQL_VERSION}
     environment:
       MYSQL_ROOT_PASSWORD: ${DATABASE_ROOT_PASSWORD}
       MYSQL_DATABASE: ${DATABASE_NAME}
@@ -12,25 +12,27 @@ services:
     expose:
       - 3306
     ports:
-      - 3306:3306
+      - 127.0.0.1:3306:3306
   php:
     build:
       context: ./php
       args:
-        PHP_VERSION: 8.2.1-fpm-alpine3.17
+        PHP_VERSION: ${PHP_VERSION}
     volumes:
-      - ../backend:/var/www/subliminator
+      - ../backend:/var/www/tech
     expose:
       - 9000
+    ports: 
+      - 127.0.0.1:9000:9000
     links:
       - database
   nginx:
     build:
       context: ./nginx
       args:
-        NGINX_VERSION: 1.23.3
+        NGINX_VERSION: ${NGINX_VERSION}
     ports:
-      - 80:80
+      - 127.0.0.1:80:80
     links:
       - node
       - database
@@ -39,7 +41,7 @@ services:
     build:
       context: ./node
       args:
-        NODE_VERSION: 19-alpine3.16
+        NODE_VERSION: ${NODE_VERSION}
     volumes:
       - ../frontend:/app
     expose:
