--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,44 +1,16 @@
 {
-  "name": "my-app",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
-  },
+  "name": "frontend",
+  "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@angular/animations": "^15.1.0",
-    "@angular/cdk": "^15.1.2",
-    "@angular/common": "^15.1.0",
-    "@angular/compiler": "^15.1.0",
-    "@angular/core": "^15.1.0",
-    "@angular/forms": "^15.1.0",
-    "@angular/material": "^15.1.2",
-    "@angular/platform-browser": "^15.1.0",
-    "@angular/platform-browser-dynamic": "^15.1.0",
-    "@angular/router": "^15.1.0",
-    "0.0.0.0": "^0.0.1-pre.alpha.1",
-    "moment": "^2.29.4",
-    "ng": "^0.0.0",
-    "rxjs": "~7.8.0",
-    "serve": "^14.2.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.12.0"
+  "scripts": {
+    "dev": "next dev -p 4200 -H 0.0.0.0",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "^15.1.3",
-    "@angular/cli": "~15.1.3",
-    "@angular/compiler-cli": "^15.1.0",
-    "@types/jasmine": "~4.3.0",
-    "jasmine-core": "~4.5.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.0.0",
-    "typescript": "~4.9.4"
+  "dependencies": {
+    "next": "13.4.18",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   }
 }
